--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  author: "github@chriskonkel.com"
+  author: chriskxl@gmail.com
   description: Magetno 2 install
   company: KXL
   license: LGPL
